--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -25,11 +25,11 @@ body {
 }
 .display-4 {
   font-family: 'Roboto', sans-serif;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   font-display: swap;
 }
 .display-4 > .mbr-iconfont {
-  font-size: 2.24rem;
+  font-size: 1.92rem;
 }
 .display-5 {
   font-family: 'Roboto', sans-serif;
@@ -64,9 +64,9 @@ body {
     line-height: calc( 1.4 * (1.7rem + (3 - 1.7) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-4 {
-    font-size: 1.12rem;
-    font-size: calc( 1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20)));
-    line-height: calc( 1.4 * (1.14rem + (1.4 - 1.14) * ((100vw - 20rem) / (48 - 20))));
+    font-size: 0.96rem;
+    font-size: calc( 1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20)));
+    line-height: calc( 1.4 * (1.07rem + (1.2 - 1.07) * ((100vw - 20rem) / (48 - 20))));
   }
   .display-5 {
     font-size: 1.2rem;
@@ -712,12 +712,12 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
-  background: #cc2952;
+  background: #d58627;
   transition: none;
   min-height: 77px;
 }
 .cid-qTkzRZLJNu .navbar-dropdown.bg-color.transparent.opened {
-  background: #cc2952;
+  background: #d58627;
 }
 .cid-qTkzRZLJNu a {
   font-style: normal;
@@ -801,7 +801,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-qTkzRZLJNu .dropdown .dropdown-menu {
-  background: #cc2952;
+  background: #d58627;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -937,10 +937,6 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1034,10 +1030,6 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
@@ -1237,12 +1229,12 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
-  background: #cc2952;
+  background: #d58627;
   transition: none;
   min-height: 77px;
 }
 .cid-qTkzRZLJNu .navbar-dropdown.bg-color.transparent.opened {
-  background: #cc2952;
+  background: #d58627;
 }
 .cid-qTkzRZLJNu a {
   font-style: normal;
@@ -1326,7 +1318,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-qTkzRZLJNu .dropdown .dropdown-menu {
-  background: #cc2952;
+  background: #d58627;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1462,10 +1454,6 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -1559,10 +1547,6 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
@@ -1723,12 +1707,12 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
-  background: #cc2952;
+  background: #d58627;
   transition: none;
   min-height: 77px;
 }
 .cid-qTkzRZLJNu .navbar-dropdown.bg-color.transparent.opened {
-  background: #cc2952;
+  background: #d58627;
 }
 .cid-qTkzRZLJNu a {
   font-style: normal;
@@ -1812,7 +1796,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-qTkzRZLJNu .dropdown .dropdown-menu {
-  background: #cc2952;
+  background: #d58627;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -1948,10 +1932,6 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2045,10 +2025,6 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
-  }
-  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
   }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
@@ -2112,12 +2088,12 @@ section.lazy-placeholder:after {
 }
 .cid-qTkzRZLJNu .navbar {
   padding: .5rem 0;
-  background: #cc2952;
+  background: #d58627;
   transition: none;
   min-height: 77px;
 }
 .cid-qTkzRZLJNu .navbar-dropdown.bg-color.transparent.opened {
-  background: #cc2952;
+  background: #d58627;
 }
 .cid-qTkzRZLJNu a {
   font-style: normal;
@@ -2201,7 +2177,7 @@ section.lazy-placeholder:after {
   padding-bottom: 0;
 }
 .cid-qTkzRZLJNu .dropdown .dropdown-menu {
-  background: #cc2952;
+  background: #d58627;
   display: none;
   position: absolute;
   min-width: 5rem;
@@ -2337,10 +2313,6 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item {
   clear: both;
 }
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-.cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-nav .nav-item:last-child {
-  margin-bottom: 1rem;
-}
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.collapsing .navbar-buttons,
 .cid-qTkzRZLJNu .collapsed .navbar-collapse.show .navbar-buttons {
   text-align: center;
@@ -2435,10 +2407,6 @@ section.lazy-placeholder:after {
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item {
     clear: both;
   }
-  .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-nav .nav-item:last-child,
-  .cid-qTkzRZLJNu .navbar-collapse.show .navbar-nav .nav-item:last-child {
-    margin-bottom: 1rem;
-  }
   .cid-qTkzRZLJNu .navbar-collapse.collapsing .navbar-buttons,
   .cid-qTkzRZLJNu .navbar-collapse.show .navbar-buttons {
     text-align: center;
@@ -2499,244 +2467,233 @@ section.lazy-placeholder:after {
 .cid-qTkzRZLJNu .dropdown-item:hover {
   color: #f7ed4a !important;
 }
-.cid-rNszr4MUJz .modal-body .close {
+.cid-rNsKmT2akD {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f295;
+}
+.cid-rNsKmT2akD .item {
+  padding-bottom: 2rem;
+}
+.cid-rNsKmT2akD .item-wrapper {
+  height: 100%;
+}
+.cid-rNsKmT2akD .item-wrapper img {
+  height: 100%;
+  object-fit: cover;
+}
+.cid-rNsKmT2akD .carousel-control,
+.cid-rNsKmT2akD .close {
   background: #1b1b1b;
 }
-.cid-rNszr4MUJz .modal-body .close span {
-  font-style: normal;
+.cid-rNsKmT2akD .carousel-control-prev {
+  margin-left: 2.5rem;
 }
-.cid-rNszr4MUJz .carousel-inner > .active,
-.cid-rNszr4MUJz .carousel-inner > .next,
-.cid-rNszr4MUJz .carousel-inner > .prev {
-  display: table;
+.cid-rNsKmT2akD .carousel-control-next {
+  margin-right: 2.5rem;
 }
-.cid-rNszr4MUJz .carousel-control .icon-next,
-.cid-rNszr4MUJz .carousel-control .icon-prev {
+.cid-rNsKmT2akD .close {
+  position: fixed;
+  opacity: .5;
+  font-size: 35px;
+  font-weight: 300;
+  width: 70px;
+  height: 70px;
+  border-radius: 50%;
+  color: #fff;
+  top: 2.5rem;
+  right: 2.5rem;
+  line-height: 70px;
+  border: none;
+  text-align: center;
+  text-shadow: none;
+  z-index: 5;
+  -webkit-transition: opacity .3s ease;
+  -moz-transition: opacity .3s ease;
+  -o-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+  font-family: 'MobiriseIcons';
+}
+.cid-rNsKmT2akD .close::before {
+  content: '\e91a';
+}
+.cid-rNsKmT2akD .close:hover {
+  opacity: 1;
+  background: #000;
+  color: #fff;
+}
+.cid-rNsKmT2akD .carousel-control {
+  position: fixed;
+  width: 70px;
+  height: 70px;
+  top: 50%;
+  margin-top: -35px;
+  line-height: 70px;
+  border-radius: 50%;
+  font-size: 35px;
+  border: 0;
+  opacity: .5;
+  text-shadow: none;
+  z-index: 5;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in-out 0s;
+  -o-transition: all 0.2s ease-in-out 0s;
+  transition: all 0.2s ease-in-out 0s;
+}
+.cid-rNsKmT2akD .carousel-inner > .active {
+  display: block;
+}
+.cid-rNsKmT2akD .carousel-control.left {
+  left: 0;
+  margin-left: 2.5rem;
+}
+.cid-rNsKmT2akD .carousel-control.right {
+  right: 0;
+  margin-right: 2.5rem;
+}
+.cid-rNsKmT2akD .carousel-control .icon-next,
+.cid-rNsKmT2akD .carousel-control .icon-prev {
   margin-top: -18px;
   font-size: 40px;
   line-height: 27px;
 }
-.cid-rNszr4MUJz .carousel-control:hover {
+.cid-rNsKmT2akD .carousel-control:hover {
   background: #1b1b1b;
   color: #fff;
   opacity: 1;
 }
-@media (max-width: 767px) {
-  .cid-rNszr4MUJz .container .carousel-control {
-    margin-bottom: 0;
+@media (max-width: 768px) {
+  .cid-rNsKmT2akD .carousel-control,
+  .cid-rNsKmT2akD .carousel-indicators,
+  .cid-rNsKmT2akD .modal .close {
+    position: fixed;
   }
 }
-.cid-rNszr4MUJz .boxed-slider {
-  position: relative;
-  padding: 93px 0;
-}
-.cid-rNszr4MUJz .boxed-slider > div {
-  position: relative;
-}
-.cid-rNszr4MUJz .container img {
-  width: 100%;
-}
-.cid-rNszr4MUJz .container img + .row {
-  position: absolute;
-  top: 50%;
-  left: 0;
-  right: 0;
-  -webkit-transform: translateY(-50%);
-  -moz-transform: translateY(-50%);
-  transform: translateY(-50%);
-  z-index: 2;
-}
-.cid-rNszr4MUJz .mbr-section {
-  padding: 0;
-  background-attachment: scroll;
-}
-.cid-rNszr4MUJz .mbr-table-cell {
-  padding: 0;
-}
-.cid-rNszr4MUJz .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-.cid-rNszr4MUJz .carousel-caption {
-  top: 50%;
-  right: 0;
-  bottom: auto;
-  left: 0;
-  display: -webkit-flex;
-  align-items: center;
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-  -webkit-align-items: center;
-}
-.cid-rNszr4MUJz .mbr-overlay {
-  z-index: 1;
-}
-.cid-rNszr4MUJz .container-slide.container {
-  min-width: 100%;
-  min-height: 100vh;
-  padding: 0;
-}
-.cid-rNszr4MUJz .carousel-item {
-  background-position: 50% 50%;
-  background-repeat: no-repeat;
-  background-size: cover;
-  -o-transition: -o-transform 0.6s ease-in-out;
-  -webkit-transition: -webkit-transform 0.6s ease-in-out;
-  transition: transform 0.6s ease-in-out, -webkit-transform 0.6s ease-in-out, -o-transform 0.6s ease-in-out;
-  -webkit-backface-visibility: hidden;
-  backface-visibility: hidden;
-  -webkit-perspective: 1000px;
-  perspective: 1000px;
-}
-@media (max-width: 576px) {
-  .cid-rNszr4MUJz .carousel-item .container {
-    width: 100%;
-  }
-}
-.cid-rNszr4MUJz .carousel-item-next.carousel-item-left,
-.cid-rNszr4MUJz .carousel-item-prev.carousel-item-right {
-  -webkit-transform: translate3d(0, 0, 0);
-  transform: translate3d(0, 0, 0);
-}
-.cid-rNszr4MUJz .active.carousel-item-right,
-.cid-rNszr4MUJz .carousel-item-next {
-  -webkit-transform: translate3d(100%, 0, 0);
-  transform: translate3d(100%, 0, 0);
-}
-.cid-rNszr4MUJz .active.carousel-item-left,
-.cid-rNszr4MUJz .carousel-item-prev {
-  -webkit-transform: translate3d(-100%, 0, 0);
-  transform: translate3d(-100%, 0, 0);
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-control {
-  top: 50%;
-  width: 70px;
-  height: 70px;
-  margin-top: -1.5rem;
-  font-size: 35px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  transition: all .3s;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-control.carousel-control-prev {
-  left: 0;
-  margin-left: 2.5rem;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-control.carousel-control-next {
-  right: 0;
-  margin-right: 2.5rem;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-control .mbr-iconfont {
-  font-size: 2rem;
-}
 @media (max-width: 767px) {
-  .cid-rNszr4MUJz .mbr-slider .carousel-control {
+  .cid-rNsKmT2akD .mbr-slider .carousel-control {
     top: auto;
-    bottom: 1rem;
+    bottom: 20px;
   }
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators {
-  position: absolute;
-  bottom: 0;
-  margin-bottom: 1.5rem !important;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators li {
-  max-width: 20px;
-  width: 20px;
-  height: 20px;
-  max-height: 20px;
-  margin: 3px;
-  background-color: rgba(0, 0, 0, 0.5);
-  border: 2px solid #fff;
-  border-radius: 50%;
-  opacity: .5;
-  transition: all .3s;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators li.active,
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators li:hover {
-  opacity: .9;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators li::after,
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators li::before {
-  content: none;
-}
-.cid-rNszr4MUJz .mbr-slider .carousel-indicators.ie-fix {
-  left: 50%;
-  display: block;
-  width: 60%;
-  margin-left: -30%;
-  text-align: center;
-}
-@media (max-width: 576px) {
-  .cid-rNszr4MUJz .mbr-slider .carousel-indicators {
-    display: none !important;
-  }
-}
-.cid-rNszr4MUJz .mbr-slider > .container img {
-  width: 100%;
-}
-.cid-rNszr4MUJz .mbr-slider > .container img + .row {
-  position: absolute;
-  top: 50%;
-  right: 0;
-  left: 0;
-  z-index: 2;
-  -moz-transform: translateY(-50%);
-  -webkit-transform: translateY(-50%);
-  transform: translateY(-50%);
-}
-.cid-rNszr4MUJz .mbr-slider > .container .carousel-indicators {
-  margin-bottom: 3px;
-}
-@media (max-width: 576px) {
-  .cid-rNszr4MUJz .mbr-slider > .container .carousel-control {
+  .cid-rNsKmT2akD .mbr-slider > .container .carousel-control {
     margin-bottom: 0;
   }
 }
-.cid-rNszr4MUJz .mbr-slider .mbr-section {
+.cid-rNsKmT2akD .carousel-indicators {
+  bottom: 0;
+  margin-bottom: 3px;
+}
+@media (max-width: 991px) {
+  .cid-rNsKmT2akD .carousel-indicators {
+    margin-bottom: 3.625rem !important;
+    padding-left: 2.5rem;
+    padding-right: 2.5rem;
+  }
+}
+@media (max-width: 767px) {
+  .cid-rNsKmT2akD .carousel-indicators {
+    display: none;
+  }
+}
+.cid-rNsKmT2akD .carousel-indicators .active,
+.cid-rNsKmT2akD .carousel-indicators li {
+  width: 7px;
+  height: 7px;
+  margin: 3px;
+  background: #1b1b1b;
+  opacity: .5;
+  border: 4px solid #1b1b1b;
+}
+.cid-rNsKmT2akD .carousel-indicators .active {
+  background: #fff;
+}
+.cid-rNsKmT2akD .carousel-indicators li {
+  max-width: 15px;
+  max-height: 15px;
+  border-radius: 50%;
+}
+.cid-rNsKmT2akD .modal {
+  padding-left: 0 !important;
+  position: fixed;
+  overflow: hidden;
+  padding-right: 0 !important;
+}
+.cid-rNsKmT2akD .modal-dialog {
+  margin: 0 auto;
+  max-width: 100%;
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.cid-rNsKmT2akD .modal-content {
+  border-radius: 0;
+  border: none;
+  background: transparent;
+}
+.cid-rNsKmT2akD .modal-body {
   padding: 0;
-  background-attachment: scroll;
+  display: flex;
+  align-items: center;
 }
-.cid-rNszr4MUJz .mbr-slider .mbr-table-cell {
-  padding: 0;
-}
-.cid-rNszr4MUJz .carousel-item .container.container-slide {
-  position: initial;
-  width: auto;
-  min-height: 0;
-}
-.cid-rNszr4MUJz .full-screen .slider-fullscreen-image {
-  min-height: 100vh;
-  background-repeat: no-repeat;
-  background-position: 50% 50%;
-  background-size: cover;
-}
-.cid-rNszr4MUJz .full-screen .slider-fullscreen-image.active {
-  display: -o-flex;
-}
-.cid-rNszr4MUJz .full-screen .container {
-  width: auto;
-  padding-right: 0;
-  padding-left: 0;
-}
-.cid-rNszr4MUJz .full-screen .carousel-item .container.container-slide {
+.cid-rNsKmT2akD .modal-body img {
   width: 100%;
-  min-height: 100vh;
-  padding: 0;
+  object-fit: contain;
+  max-height: calc(98.25vh);
 }
-.cid-rNszr4MUJz .full-screen .carousel-item .container.container-slide img {
+.cid-rNsKmT2akD .carousel {
+  width: 100%;
+}
+.cid-rNsKmT2akD .modal-dialog .carousel-inner {
+  height: auto;
+}
+.cid-rNsKmT2akD .modal-backdrop.in {
+  opacity: .8;
+}
+.cid-rNsKmT2akD .modal.fade .modal-dialog {
+  -webkit-transition: margin-top 0.3s ease-out;
+  -moz-transition: margin-top 0.3s ease-out;
+  -o-transition: margin-top 0.3s ease-out;
+  transition: margin-top 0.3s ease-out;
+}
+.cid-rNsKmT2akD .modal.fade .modal-dialog,
+.cid-rNsKmT2akD .modal.in .modal-dialog {
+  -webkit-transform: none;
+  -ms-transform: none;
+  -o-transform: none;
+  transform: none;
+}
+.cid-rNsKmT2akD H4 {
+  text-align: left;
+}
+.cid-rNsMfFTIAP .google-map {
+  height: 25rem;
+  position: relative;
+}
+.cid-rNsMfFTIAP .google-map iframe {
+  height: 100%;
+  width: 100%;
+}
+.cid-rNsMfFTIAP .google-map [data-state-details] {
+  color: #6b6763;
+  font-family: Montserrat;
+  height: 1.5em;
+  margin-top: -0.75em;
+  padding-left: 1.25rem;
+  padding-right: 1.25rem;
+  position: absolute;
+  text-align: center;
+  top: 50%;
+  width: 100%;
+}
+.cid-rNsMfFTIAP .google-map[data-state] {
+  background: #e9e5dc;
+}
+.cid-rNsMfFTIAP .google-map[data-state="loading"] [data-state-details] {
   display: none;
 }
-.cid-rNszr4MUJz .mbr-background-video-preview {
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
+.cid-rNsMPExmOz {
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: #f9f295;
 }
-.cid-rNszr4MUJz .mbr-overlay ~ .container-slide {
-  z-index: auto;
-}
-.cid-rNszr4MUJz H2 {
-  color: #232323;
+.cid-rNsMPExmOz .mbr-section-subtitle {
+  color: #767676;
 }
